--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -36,4 +36,10 @@ ToolCraft is perfect for:
 
 ## License
 
-ToolCraft is released under the MIT License. See the [LICENSE](https://github.com/SpikingNeurons/toolcraft/blob/main/LICENSE) file for details.
+ToolCraft is released under the BSD 3-Clause License. See the [LICENSE](https://github.com/SpikingNeurons/toolcraft/blob/main/LICENSE) file for details.
+
+## Contributing
+
+We welcome contributions from the community! Please note that all contributors must sign our [Contributor License Agreement (CLA)](https://github.com/SpikingNeurons/toolcraft/blob/main/CLA.md) before their contributions can be accepted. This ensures clear ownership and licensing of all project contributions.
+
+See our [Contributing Guide](contributing) to get involved.
